# rustimate-lsp

./: Cargo.toml  README.md  handshake.py  test_lsp.sh
src/: completion.rs  diagnostics.rs  main.backup.rs  main.rs  parser.rs
src/grammar/: rsl.pest
