[package]
name = "rustimate-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
dashmap = "6.1.0"
pest = "2.8.6"
pest_derive = "2.8.6"
tokio = {version = "1.50.0", features = ["macros", "rt-multi-thread", "io-std"]}
tower-lsp = "0.20.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tree-sitter = "0.26.6"
tree-sitter-rustimate = {path = "../tree-sitter-rustimate"}
